fix: download buy button wraps on smaller screens

--- a/assets/scss/components/compat/edd/_buttons.scss
+++ b/assets/scss/components/compat/edd/_buttons.scss
@@ -7,6 +7,7 @@
 .nv-sidebar-wrap .button.edd-add-to-cart {
 
 	@extend %nv-button-primary;
+	display: block;
 
 	&:hover {
 
